# mqtt311-client-library

./: README.md
doc/: flexibility_and_extensibility.md  freertos_incorporation.md
examples/esp32/main/: CMakeLists.txt  main.c  mqtt_functions.h  nvs_functions.c  nvs_functions.h  tcp_functions.c
examples/esp32/ssl/: CMakeLists.txt  README.md
examples/esp32/ssl/main/: CMakeLists.txt  main.c  mqtt_functions.c  mqtt_functions.h  ssl_functions.h
examples/esp32/tcp/: CMakeLists.txt  README.md
examples/esp32/tcp/main/: CMakeLists.txt  main.c  mqtt_functions.c  mqtt_functions.h
